ajustes chamada feign e docker, ajustes sonar